--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -155,7 +155,7 @@
 													<option
 														th:each="docente, row : ${eventoWrapper.docenti}"
 														th:value="${{docente.id}}"
-														th:text="${docente.anagrafica.cognome}">Docente Selezionato
+														th:text="${docente.descrizionePerAttivitaRES}">Docente Selezionato
 													</option>
 												</select>
 											</div>
