Finished lazy loading.
Notes:
	1. Sede column, cannot be sorted because sedeEvento is not
	part of Evento entity. Removed sorting option for that column.
	2. Removed sorting option for column Azione, since it doesn't
	have any text.
	3. Ajax call does not reload the page, when session expires
	the controller throws an error, which is recoded by datatable
	and displayed by a pop-up. We added a generic message to that
	pop-up, it needs to be checked.
	4. From our testings it looks okay. Bugs are welcomed :P.

--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -377,7 +377,7 @@
 				        "sort": "position",
 				       
 						 ajax:{
-							  url: "/evento/springPaginationDataTables"
+							  url: "/evento/eventoListPaginated"
 						  },
 						  "columns": [
 					            { "data": "codiceIdent"},
@@ -385,7 +385,7 @@
 					            { "data": "edizione" },
 					            { "data": "tipo"},
 					            { "data": "titolo"},
-					            { "data": "sede"},
+					            { "data": "sede", "orderable": false},
 					            { "data": "dataInizio"},
 					            { "data": "dataFine"},
 					            { "data": "stato"},
@@ -393,7 +393,7 @@
 					            { "data": "durata"},
 					            { "data": "dataScadenzaRediconto"},
 					            { "data": "creditiConfermati"},
-					            { "data": "links"}
+					            { "data": "links", "orderable": false}
 					        ],
 					        "columnDefs": [
 			                     {"targets": colonne, "width": "1px"},
